Issue #13: adding jump to content link, reviewing links not grouped

--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -9,9 +9,6 @@ $bg
 		text-align center
 		padding rem(140px) 0 rem(66px)
 
-.jump-content
-	text-align right
-
 .bar-header
 	background sec
 	padding rem(10px) rem(20px)
@@ -19,6 +16,14 @@ $bg
 	position fixed
 	width 100%
 	z-index 10
+	.jump-content
+		text-align right
+		margin 0
+	.jump-content a
+		display block
+		color main
+		font-size rem(12px)
+		line-height rem(30px)
 	.logo
 		margin 0
 		line-height rem(35px)
@@ -32,7 +37,7 @@ $bg
 // Header Post
 .header-post
 	@extends $bg
-	min-height rem(500px)
+	min-height rem(530px)
 	position fixed
 	width 100%
 	.content
