--- a/src/styl/_home.styl
+++ b/src/styl/_home.styl
@@ -1,5 +1,5 @@
 main
-    padding-top rem(100px)
+    padding-top rem(130px)
 
 .row
     center(rem(1030px))
